data/derived/comb/progs/unify/prog1056.ml.out
Characters 126-128:
  if (List.mem tl hd = true) then seen
                  ^^
Error: This expression has type 'a but an expression was expected of type
         'a list list
       The type variable 'a occurs inside 'a list list
